<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com|smart-space@qq.com>
    2019（原型框架）2021（正式命名TinUI发布）

==========更新日志==========

==========5.2==========
2024-
1. button最大化宽度、最小化宽度参数
*2. button2最大化宽度、最小化宽度参数
3. 修复treeview跨级选定展开单层后的报错问题
==========5.1==========
2024-7-5
1. test\tuxmltest.py 升级为简易TinUIxml编辑器
2. 优化scalebar标识符元素
3. BasicTinUI新增show_location方法，用于设计时反馈坐标信息
4. checkbutton引发响应的command接受的唯一参数为选定状态，True/False
==========5.0==========
2024-6-24
1. 以下控件接入统一坐标对齐模式：listview, pipspager, ratingbar,
    radiobox, pivot, button2, waitframe, passwordbox, image,
    swipecontrol, picker
2. radiobox使用新样式，同时更改默认间距
3. 优化expander样式
4. 优化spinbox提示符
5. 优化passwordbox提示符
6. 修复TinUIXml自定义初始坐标被忽略的问题
7. tinuixml修复x，y参数自定义，新增anchor自定义(精确到line，但是每个标签内优先级更高)
2024-6-16 pre-5
1. 更新checkbutton样式
2. waitbar2新样式
3. 以下控件接入统一坐标对齐模式：checkbutton, entry, radiobutton,
    link, waitbar1, waitbar2, combobox, button, label, progressbar,
    table, onoff, spinbox, scalebar, info, waitbar3
4. radiobutton去除边框
5. combobox新样式，增加height参数，控制浮出窗口高度
6. onoff新样式
7. info提示触发文本后加入叹号提示文本标识符
8. waitbar3使用圆角
2024-2-15 pre-4
1. labelframe改为圆角边框
2. notebook新样式
3. ratingbar新样式，参数r改size（字体大小）
4. BasicTinUI.clean_windows()清除浮出控件的子窗口，TinUIXml的clean也会触发
5. notebook支持自定义滚动条颜色
2024-2-13 pre-3
1. 优化pipspager样式
2. textbox, listbox, canvas, ui支持自定scrollbar颜色
3. 新介绍窗口
4. scrollbar新标识元素
5. 修复treeview展开时可能的提示元素的位置错位
2024-2-9 pre-2
1. 更新menu样式
2. menubutton 添加segeo fluent icon字体文件
3. 更新picker样式
4. 新logo
5. 新增菜单按钮 menubutton
6. 更新黑暗样式
2024-2-6 pre-1
1. 添加TinUIFont类，管理字体文件
2. 更新table样式

==========4.7==========
2024-1-24
1. 优化radiobox样式
2. 新增滚动选值框 picker

==========4.6==========
2023-12-17
1. spinbox返回值添加num属性
2. 修复listbox横向滚动条长度错误的问题

==========4.5==========
2023-11-12
1. 修复treeview调试错误

==========4.4==========
2023-3-11
1. 新增密码输入框 passwordbox

==========4.3==========
2023-2-2
1. 优化帮助手册