@@ -7,8 +7,9 @@
 ==========5.2==========
 2024-
 1. button最大化宽度、最小化宽度参数
-*2. button2最大化宽度、最小化宽度参数
+2. button2最大化宽度、最小化宽度参数
 3. 修复treeview跨级选定展开单层后的报错问题
+*4. TinUIXml简易编辑器添加标记点管理
 ==========5.1==========
 2024-7-5
 1. test\tuxmltest.py 升级为简易TinUIxml编辑器
